# cloud-native-course

./: README.md
class1/: README.md  pyproject.toml
class1/class1/: main.py
class1/tests/: test_project.py
class10/: compose.yaml
class10/microservice_02/: .env  Dockerfile.dev
class10/todo/: .env  Dockerfile.dev
class2/: README.md  pyproject.toml
class2/class2/: main.py
class2/tests/: test_project.py
class3/: pyproject.toml
class3/dailyTasks-todo-app/: README.md
class4/dailyTasks-todo-app/: Dockerfile.dev  README.md
class5/: README.md
class5/dailyTasks-todo-app/: Dockerfile.dev  compose.yaml
class6/dailyTasks-todo-app/: compose.yaml
class7/: readme.md
class8/: compose.yaml
class8/microservice_one/: readme.md
class8/microservice_one/app/: main.py
class9/: compose.yaml
class9/init/kafka/: Dockerfile
class9/microservice_one/: pyproject.toml
class9/microservice_one/app/: settings.py
class9/microservice_two/: .env  Dockerfile.dev
class9/microservice_two/app/middleware/: middleware.py
dailyTasks-todo-app/: pyproject.toml
