[tool.poetry]
name = "class1"
version = "0.1.0"
description = ""
authors = ["Farhaj499 <farhajshauket@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
